--- a/index.html
+++ b/index.html
@@ -114,7 +114,44 @@
         </div>
         <div class="content-main">
             <div class="content-left-blc">
-            
+                <div class="top-cnt-main">
+                    <div class="pf-view">
+                        <div class="i-wrapper">
+                            <i class="fa-solid fa-eye"></i>
+                        </div>
+                        <div class="pf-main">
+                            <span class="pf-cnt">Profile</span>
+                            <span class="pf-num">112.000</span>
+                        </div>
+                    </div>
+                    <div class="pf-view">
+                        <div class="i-wrapper">
+                            <i class="fa-solid fa-eye"></i>
+                        </div>
+                        <div class="pf-main">
+                            <span class="pf-cnt">Profile</span>
+                            <span class="pf-num">112.000</span>
+                        </div>
+                    </div>
+                    <div class="pf-view">
+                        <div class="i-wrapper">
+                            <i class="fa-solid fa-eye"></i>
+                        </div>
+                        <div class="pf-main">
+                            <span class="pf-cnt">Profile</span>
+                            <span class="pf-num">112.000</span>
+                        </div>
+                    </div>
+                    <div class="pf-view">
+                        <div class="i-wrapper">
+                            <i class="fa-solid fa-eye"></i>
+                        </div>
+                        <div class="pf-main">
+                            <span class="pf-cnt">Profile</span>
+                            <span class="pf-num">112.000</span>
+                        </div>
+                    </div>
+                </div>
             </div>
     
             <div class="content-right-blc">
