--- a/index.html
+++ b/index.html
@@ -110,55 +110,73 @@
     <!-- begin content -->
     <div id="content">
         <div class="content-head">
-            <span>HORIZONE LAYOUT</span>
+            <span>Project Manage</span>
         </div>
         <div class="content-main">
             <div class="content-left-blc">
                 <div class="top-cnt-main">
-                    <div class="pf-view">
+                    <div class="prj-view">
                         <div class="i-wrapper">
                             <i class="fa-solid fa-eye"></i>
                         </div>
-                        <div class="pf-main">
-                            <span class="pf-cnt">Profile</span>
-                            <span class="pf-num">112.000</span>
+                        <div class="prj-main">
+                            <span class="prj-cnt">Project 1</span>
+                            <span class="prj-num">112.000</span>
                         </div>
                     </div>
-                    <div class="pf-view">
+                    <div class="prj-view">
                         <div class="i-wrapper">
                             <i class="fa-solid fa-eye"></i>
                         </div>
-                        <div class="pf-main">
-                            <span class="pf-cnt">Profile</span>
-                            <span class="pf-num">112.000</span>
+                        <div class="prj-main">
+                            <span class="prj-cnt">Project</span>
+                            <span class="prj-num">112.000</span>
                         </div>
                     </div>
-                    <div class="pf-view">
+                    <div class="prj-view">
                         <div class="i-wrapper">
                             <i class="fa-solid fa-eye"></i>
                         </div>
-                        <div class="pf-main">
-                            <span class="pf-cnt">Profile</span>
-                            <span class="pf-num">112.000</span>
+                        <div class="prj-main">
+                            <span class="prj-cnt">Project</span>
+                            <span class="prj-num">112.000</span>
                         </div>
                     </div>
-                    <div class="pf-view">
+                    <div class="prj-view">
                         <div class="i-wrapper">
                             <i class="fa-solid fa-eye"></i>
                         </div>
-                        <div class="pf-main">
-                            <span class="pf-cnt">Profile</span>
-                            <span class="pf-num">112.000</span>
+                        <div class="prj-main">
+                            <span class="prj-cnt">Project</span>
+                            <span class="prj-num">112.000</span>
                         </div>
-                    </div>
+                    </div> 
+                    <div class="prj-view">
+                        <div class="i-wrapper">
+                            <i class="fa-solid fa-eye"></i>
+                        </div>
+                        <div class="prj-main">
+                            <span class="prj-cnt">Project</span>
+                            <span class="prj-num">112.000</span>
+                        </div>
+                    </div> 
+                    <div class="prj-view">
+                        <div class="i-wrapper">
+                            <i class="fa-solid fa-eye"></i>
+                        </div>
+                        <div class="prj-main">
+                            <span class="prj-cnt">Project</span>
+                            <span class="prj-num">112.000</span>
+                        </div>
+                    </div> 
                 </div>
-                <div class="pf-chart">
-                    <div class="pf-chart-hd">
+                <div class="prj-chart-js hide">
+                    <div class="prj-chart-hd">
                         <span>Profile Visit</span>
                     </div>
-                    <div class="pf-chart-main">
+                    <div class="prj-chart-main">
                         <i class="fa-solid fa-bars chart-menu-js"></i>
-                            <ul class="chart-menu">
+                            <ul class="chart-menu hide">
                                 <li>Download PDF</li>
                                 <li>Download PDF</li>
                                 <li>Download PDF</li>
@@ -169,18 +187,18 @@
                 </div>
                 
                 <div class="content-right-blc">
-                    <div class="user-pf">
-                        <div class="user-pf-img">
+                    <div class="user-prj">
+                        <div class="user-prj-img">
                             <img src="" alt="">
                         </div>
-                        <div class="user-pf-main">
-                            <span class="userpf-name">John</span>
-                            <span class="userpf-name-tag">@john123</span>
+                        <div class="user-prj-main">
+                            <span class="userprj-name">John</span>
+                            <span class="userprj-name-tag">@john123</span>
                         </div>
                     </div>
                     <div class="recent-mes">
                         <div class="recent-mes-hd">
-                            <span>Recent Messagees</span>
+                            <span>Manage History</span>
                         </div>
                         <div class="recent-mess-users">
                             <li>
@@ -188,9 +206,9 @@
                                     <div class="mess-user-img">
                                         <img src="" alt="">
                                     </div>
-                                    <div class="user-pf-main">
-                                        <span class="userpf-name">John</span>
-                                        <span class="userpf-name-tag">@john123</span>
+                                    <div class="user-prj-main">
+                                        <span class="userprj-name">Project</span>
+                                        <span class="userprj-name-tag">123</span>
                                     </div>
                                 </div>
                             </li>
@@ -199,9 +217,9 @@
                                     <div class="mess-user-img">
                                         <img src="" alt="">
                                     </div>
-                                    <div class="user-pf-main">
-                                        <span class="userpf-name">John</span>
-                                        <span class="userpf-name-tag">@john123</span>
+                                    <div class="user-prj-main">
+                                        <span class="userprj-name">Project</span>
+                                        <span class="userprj-name-tag">123</span>
                                     </div>
                                 </div>
                             </li>
@@ -210,14 +228,14 @@
                                     <div class="mess-user-img">
                                         <img src="" alt="">
                                     </div>
-                                    <div class="user-pf-main">
-                                        <span class="userpf-name">John</span>
-                                        <span class="userpf-name-tag">@john123</span>
+                                    <div class="user-prj-main">
+                                        <span class="userprj-name">Project</span>
+                                        <span class="userprj-name-tag">123</span>
                                     </div>
                                 </div>
                             </li>
                         </div>
-                        <button class="conver-btn">Start Conversation</button>
+                        <button class="conver-btn">Show History</button>
                     </div>
                 </div>
             </div>
