--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <script src="https://kit.fontawesome.com/2878e6014d.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
     <!-- begin heading -->
     <div id="heading">
@@ -37,11 +39,11 @@
                 <i class="fa-solid fa-border-all"></i>
                 <span>DASHBOARD</span>
                 <i class="fa-solid fa-caret-down"></i>
-                    <ul class="submenu">
-                        <li><a href="">aaaa</a></li>
-                        <li><a href="">aaaa</a></li>
-                        <li><a href="">aaaa</a></li>
-                    </ul>
+                <ul class="submenu">
+                    <li><a href="">aaaa</a></li>
+                    <li><a href="">aaaa</a></li>
+                    <li><a href="">aaaa</a></li>
+                </ul>
             </ul>
             <ul>
                 <i class="fa-solid fa-border-all"></i>
@@ -115,16 +117,8 @@
         <div class="content-main">
             <div class="content-left-blc">
                 <div class="top-cnt-main">
-                    <div class="prj-view">
-                        <div class="i-wrapper">
-                            <i class="fa-solid fa-eye"></i>
-                        </div>
-                        <div class="prj-main">
-                            <span class="prj-cnt">Project 1</span>
-                            <span class="prj-num">112.000</span>
-                        </div>
-                    </div>
-                    <div class="prj-view">
+                    <!-- mẫu prj block  -->
+                    <!-- <div class="prj-view">
                         <div class="i-wrapper">
                             <i class="fa-solid fa-eye"></i>
                         </div>
@@ -132,118 +126,83 @@
                             <span class="prj-cnt">Project</span>
                             <span class="prj-num">112.000</span>
                         </div>
-                    </div>
-                    <div class="prj-view">
-                        <div class="i-wrapper">
-                            <i class="fa-solid fa-eye"></i>
-                        </div>
-                        <div class="prj-main">
-                            <span class="prj-cnt">Project</span>
-                            <span class="prj-num">112.000</span>
-                        </div>
-                    </div>
-                    <div class="prj-view">
-                        <div class="i-wrapper">
-                            <i class="fa-solid fa-eye"></i>
-                        </div>
-                        <div class="prj-main">
-                            <span class="prj-cnt">Project</span>
-                            <span class="prj-num">112.000</span>
-                        </div>
-                    </div> 
-                    <div class="prj-view">
-                        <div class="i-wrapper">
-                            <i class="fa-solid fa-eye"></i>
-                        </div>
-                        <div class="prj-main">
-                            <span class="prj-cnt">Project</span>
-                            <span class="prj-num">112.000</span>
-                        </div>
-                    </div> 
-                    <div class="prj-view">
-                        <div class="i-wrapper">
-                            <i class="fa-solid fa-eye"></i>
-                        </div>
-                        <div class="prj-main">
-                            <span class="prj-cnt">Project</span>
-                            <span class="prj-num">112.000</span>
-                        </div>
-                    </div> 
+                    </div> -->
                 </div>
                 <div class="prj-chart-js hide">
                     <div class="prj-chart-hd">
-                        <span>Profile Visit</span>
+                        <span>Project Visit</span>
                     </div>
                     <div class="prj-chart-main">
                         <i class="fa-solid fa-bars chart-menu-js"></i>
-                            <ul class="chart-menu hide">
-                                <li>Download PDF</li>
-                                <li>Download PDF</li>
-                                <li>Download PDF</li>
-                            </ul>
+                        <ul class="chart-menu hide">
+                            <li>Download PDF</li>
+                            <li>Download PDF</li>
+                            <li>Download PDF</li>
+                        </ul>
                         <canvas id="myChart"></canvas>
-                        </div>
-                    </div>
-                </div>
-                
-                <div class="content-right-blc">
-                    <div class="user-prj">
-                        <div class="user-prj-img">
-                            <img src="" alt="">
-                        </div>
-                        <div class="user-prj-main">
-                            <span class="userprj-name">John</span>
-                            <span class="userprj-name-tag">@john123</span>
-                        </div>
-                    </div>
-                    <div class="recent-mes">
-                        <div class="recent-mes-hd">
-                            <span>Manage History</span>
-                        </div>
-                        <div class="recent-mess-users">
-                            <li>
-                                <div class="rc-mess-user">
-                                    <div class="mess-user-img">
-                                        <img src="" alt="">
-                                    </div>
-                                    <div class="user-prj-main">
-                                        <span class="userprj-name">Project</span>
-                                        <span class="userprj-name-tag">123</span>
-                                    </div>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="rc-mess-user">
-                                    <div class="mess-user-img">
-                                        <img src="" alt="">
-                                    </div>
-                                    <div class="user-prj-main">
-                                        <span class="userprj-name">Project</span>
-                                        <span class="userprj-name-tag">123</span>
-                                    </div>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="rc-mess-user">
-                                    <div class="mess-user-img">
-                                        <img src="" alt="">
-                                    </div>
-                                    <div class="user-prj-main">
-                                        <span class="userprj-name">Project</span>
-                                        <span class="userprj-name-tag">123</span>
-                                    </div>
-                                </div>
-                            </li>
-                        </div>
-                        <button class="conver-btn">Show History</button>
                     </div>
                 </div>
             </div>
+
+            <div class="content-right-blc">
+                <div class="user-prj">
+                    <div class="user-prj-img">
+                        <img src="" alt="">
+                    </div>
+                    <div class="user-prj-main">
+                        <span class="userprj-name">John</span>
+                        <span class="userprj-name-tag">@john123</span>
+                    </div>
+                </div>
+                <div class="recent-mes">
+                    <div class="recent-mes-hd">
+                        <span>Manage History</span>
+                    </div>
+                    <div class="recent-mess-users">
+                        <li>
+                            <div class="rc-mess-user">
+                                <div class="mess-user-img">
+                                    <img src="" alt="">
+                                </div>
+                                <div class="user-prj-main">
+                                    <span class="userprj-name">Project</span>
+                                    <span class="userprj-name-tag">123</span>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="rc-mess-user">
+                                <div class="mess-user-img">
+                                    <img src="" alt="">
+                                </div>
+                                <div class="user-prj-main">
+                                    <span class="userprj-name">Project</span>
+                                    <span class="userprj-name-tag">123</span>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="rc-mess-user">
+                                <div class="mess-user-img">
+                                    <img src="" alt="">
+                                </div>
+                                <div class="user-prj-main">
+                                    <span class="userprj-name">Project</span>
+                                    <span class="userprj-name-tag">123</span>
+                                </div>
+                            </div>
+                        </li>
+                    </div>
+                    <button class="conver-btn">Show History</button>
+                </div>
+            </div>
         </div>
-        <!-- end content -->
-        
-        <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-        <script src="./assets/js/script.js"></script>
+    </div>
+    <!-- end content -->
+
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="./assets/js/script.js"></script>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.1/chart.min.js" integrity="sha512-L0Shl7nXXzIlBSUUPpxrokqq4ojqgZFQczTYlGjzONGTDAcLremjwaWv5A+EDLnxhQzY5xUZPWLOLqYRkY0Cbw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
 </body>
+
 </html>
