--- a/index.html
+++ b/index.html
@@ -129,21 +129,26 @@
                     </div> -->
                 </div>
                 <div class="prj-chart-js hide">
-                    <div class="prj-chart-hd">
+                    <!-- mẫu bảng trạng thái -->
+                    <!-- <div class="prj-chart-hd">
                         <span>Project Visit</span>
                     </div>
-                    <div class="prj-chart-main">
-                        <i class="fa-solid fa-bars chart-menu-js"></i>
-                        <ul class="chart-menu hide">
-                            <li>Download PDF</li>
-                            <li>Download PDF</li>
-                            <li>Download PDF</li>
-                        </ul>
-                        <canvas id="myChart"></canvas>
-                    </div>
+                    <table class="project-table" border="1" cellpadding="5" cellspacing="0" width="50%" align="center">
+                        <thead>
+                            <tr>
+                                <th>ID</th>
+                                <th>Status</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>${rowData[0]}</td>
+                                <td>${rowData[1]}</td>
+                            </tr>
+                        </tbody>
+                    </table> --> 
                 </div>
             </div>
-
             <div class="content-right-blc">
                 <div class="user-prj">
                     <div class="user-prj-img">
