--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <div class="card-body">
                         <!-- Table with outer spacing -->
                         <div class="table-responsive">
-                            <table class="table table-lg">
+                            <!-- <table class="table table-lg">
                                 <thead>
                                     <tr>
                                         <th>ID</th>
@@ -61,7 +61,7 @@
                                         <td>$15/hr</td>
                                     </tr>
                                 </tbody>
-                            </table>
+                            </table> -->
                         </div>
                     </div>
                 </div>
@@ -82,7 +82,7 @@
                     </div>
                     <div class="card">
                         <div class="card-header">
-                            <h4>Recent Messages</h4>
+                            <h4>Manage History</h4>
                         </div>
                         <div class="card-content pb-4">
                             <div class="recent-message d-flex px-4 py-3">
@@ -90,8 +90,8 @@
                                     <img src="./assets/compiled/jpg/4.jpg">
                                 </div>
                                 <div class="name ms-4">
-                                    <h5 class="mb-1">Hank Schrader</h5>
-                                    <h6 class="text-muted mb-0">@johnducky</h6>
+                                    <h5 class="mb-1">Project</h5>
+                                    <h6 class="text-muted mb-0">123</h6>
                                 </div>
                             </div>
                             <div class="recent-message d-flex px-4 py-3">
@@ -99,8 +99,8 @@
                                     <img src="./assets/compiled/jpg/5.jpg">
                                 </div>
                                 <div class="name ms-4">
-                                    <h5 class="mb-1">Dean Winchester</h5>
-                                    <h6 class="text-muted mb-0">@imdean</h6>
+                                    <h5 class="mb-1">Project</h5>
+                                    <h6 class="text-muted mb-0">123</h6>
                                 </div>
                             </div>
                             <div class="recent-message d-flex px-4 py-3">
@@ -108,13 +108,12 @@
                                     <img src="./assets/compiled/jpg/1.jpg">
                                 </div>
                                 <div class="name ms-4">
-                                    <h5 class="mb-1">John Dodol</h5>
-                                    <h6 class="text-muted mb-0">@dodoljohn</h6>
+                                    <h5 class="mb-1">Project</h5>
+                                    <h6 class="text-muted mb-0">123</h6>
                                 </div>
                             </div>
                             <div class="px-4">
-                                <button class='btn btn-block btn-xl btn-light-primary font-bold mt-3'>Start
-                                    Conversation</button>
+                                <button class='btn btn-block btn-xl btn-light-primary font-bold mt-3'>Show History
                             </div>
                         </div>
                     </div>
