3rd update 23.3 addChanel

--- a/addProject.html
+++ b/addProject.html
@@ -44,7 +44,7 @@
             </div>
             <div class="add-device-main">
                 <div class="device-added">
-                    <div class="device-hd">
+                    <!-- <div class="device-hd">
                         <span>Mã - Cabinet - Ngày - Loại thiết bị</span>
                         <i class="fa-solid fa-caret-down" data-info="123"></i>
                     </div>
@@ -67,7 +67,7 @@
                                 <td>xóa</td>
                             </tr>
                         </tbody>
-                    </table>
+                    </table> -->
                 </div>
             </div>
         </div>
@@ -167,15 +167,15 @@
         <div class="add-chanel-mockup hide">
                 <label for="chonch">Chọn chanel</label>
                     <select id="chonch" name="chonch">
-                        <option value="ch1">CH1</option>
-                        <option value="ch2">CH2</option>
-                        <option value="ch3">CH3</option>
-                        <option value="ch4">CH4</option>
-                        <option value="ch5">CH5</option>
-                        <option value="ch6">CH6</option>
+                        <option value="CH1">CH1</option>
+                        <option value="CH2">CH2</option>
+                        <option value="CH3">CH3</option>
+                        <option value="CH4">CH4</option>
+                        <option value="CH5">CH5</option>
+                        <option value="CH6">CH6</option>
                     </select>
-                <button class="chanel-save">save</button>
-                <button class="chanel-close">close</button>
+                <button class="chanel-save" data-info="">Save</button>
+                <button class="chanel-close">Close</button>
                 <div><label>Itt</label>
                     <input type="text" name="itt" id="">
                 </div>
