update 24.3 addchanel + fix bug

--- a/addProject.html
+++ b/addProject.html
@@ -174,8 +174,6 @@
                         <option value="CH5">CH5</option>
                         <option value="CH6">CH6</option>
                     </select>
-                <button class="chanel-save" data-info="">Save</button>
-                <button class="chanel-close">Close</button>
                 <div><label>Itt</label>
                     <input type="text" name="itt" id="">
                 </div>
@@ -237,6 +235,9 @@
                     <input type="checkbox" id="includeL" name="checkbox">
                     <label style="margin:0 10px;">SourceFr</label>
                     <input type="checkbox" id="sourceFr" name="checkbox">
+                </div>
+                <div class="chanel-btns">
+                    <span class="chanel-close">Close</span>
                 </div>
             <!-- end add chanel  mockup -->
         </div>
