2nd update 24.3 delete + edit device

--- a/addProject.html
+++ b/addProject.html
@@ -39,12 +39,14 @@
         </div>
         <div class="add-device">
             <div class="add-decive-hd">
-                <span>Device </span>
-                <i class="fa-solid fa-plus add-device-btn"></i>
+                <span class="add-device-btn">
+                    <i class="fa-solid fa-plus"></i>
+                    New Device
+                </span>
             </div>
             <div class="add-device-main">
-                <div class="device-added">
-                    <!-- <div class="device-hd">
+                <!-- <div class="device-added">
+                    <div class="device-hd">
                         <span>Mã - Cabinet - Ngày - Loại thiết bị</span>
                         <i class="fa-solid fa-caret-down" data-info="123"></i>
                     </div>
@@ -67,8 +69,8 @@
                                 <td>xóa</td>
                             </tr>
                         </tbody>
-                    </table> -->
-                </div>
+                    </table>
+                </div> -->
             </div>
         </div>
         <!-- structure mockup -->
@@ -103,8 +105,6 @@
         <div class="add-device-mockup hide">
             <div class="add-device-hd">
                 <span>Device</span>
-                <button class="device-add">Add</button>
-                <button class="device-close">Close</button>
             </div>
             <div><label for="">Mã</label>
                 <input type="text" name="" id="ma">
@@ -159,6 +159,9 @@
                     <option value="6k3p">6k3p</option>
                     <option value="12k3p">12k3p</option>
                 </select>
+            </div>
+            <div class="device-btns">
+                <span class="device-close">Close</span>
             </div>
         </div>
         <!-- end device mockup -->
